# rental_area_search

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  nyc_property_finder_spec.md  nyc_repo_scaffold.md  pyproject.toml  requirements.txt
app/: neighborhood_qa_app.py  stoop_explore.py  streamlit_app.py  streamlit_app_v2.py
config/: curated_scrape_articles.yaml  data_sources.example.yaml  data_sources.yaml  poi_categories.yaml  scoring_weights.yaml  settings.yaml
docs/: README.md  architecture.md  build_plan.md  data_model.md  decision_log.md  eater_map_parser_v1.md  neighborhood_explorer_app_review.md  packages.md  pipeline_plan.md  platform_context.md  poi_categories.md  source_inventory.md  user_guide.md
docs/app/: neighborhood_explorer_app.md  property_explorer_app.md  stoop_explore_launch_runbook.md
docs/contracts/: listing_csv_contract.md
docs/neighborhood_character/: README.md  explore_v1_validation.md  framework.md  narrative_concepts.md  signal_inventory.md
tests/: test_base_map_app.py  test_curated_poi_v3.py  test_geo.py  test_geosearch.py  test_google_places_poi.py  test_hashing.py  test_neighborhood_character_mart.py  test_neighborhood_features.py  test_neighborhood_qa.py  test_poi_parsing.py  test_property_context_pipeline.py  test_property_explorer_app.py  test_property_file_ingestion.py  test_public_poi_wave1.py  test_schema.py  test_stoop_explore.py  test_subway_ingestion.py  test_tract_to_nta.py  test_web_scrape_pipeline.py  test_web_scraping_eater.py  test_web_scraping_semi_manual.py  test_web_scraping_timeout.py
(+143 files in other folders)
